k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shop-1
  labels:
    tenant: shop-1
