k8s/deployment-platform-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-frontend
  namespace: schlopify-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform-frontend
  template:
    metadata:
      labels:
        app: platform-frontend
    spec:
      containers:
        - name: frontend
          image: platform-frontend:v4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
