k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: shop-frontend
  namespace: shop-1
spec:
  selector:
    app: shop-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
