k8s/service-platform-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-frontend
  namespace: schlopify-platform
spec:
  selector:
    app: platform-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
