k8s/service-shop-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: shop-api
  namespace: shop-1
spec:
  selector:
    app: shop-db
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
